Bug 811920 - Message list highlight bar - insufficient contrast when list is blurred. r=andreasn.

--- a/mail/themes/gnomestripe/mail/mailWindow1.css
+++ b/mail/themes/gnomestripe/mail/mailWindow1.css
@@ -422,7 +422,7 @@ treechildren::-moz-tree-cell-text(subjectCol) {
 }
 
 #threadTree > treechildren::-moz-tree-row(odd) {
-  background-color: -moz-oddtreerow;
+  background-color: transparent;
 }
 
 #threadTree > treechildren::-moz-tree-row(selected) {
